# MentorZero

./: .dockerignore  .env.example  .gitignore  .pyre_configuration  Dockerfile  LICENSE  README.md  cli.py  docker-compose.yml  migrate_db.py  project_summary.json  pyproject.toml  pyrightconfig.json  requirements.txt  test_end_to_end.py  verify_ws.py
agent/: config.py
agent/azl/: __init__.py  generator.py  optimized_scorer.py  scorer.py
agent/core/: cache_manager.py  capabilities.py  exporter.py  hyde_retriever.py  orchestrator.py  research_agent.py  search_providers.py  vector_store.py
agent/db/: base.py  crud.py  graph_store.py  models.py  schema.sql
agent/embeddings/: service.py
agent/llm/: ollama_client.py
agent/services/: background_processor.py  rag.py  teaching.py  validators.py
agent/utils/: audit.py  error_handler.py
agent/vectorstore/: faiss_store.py
agent/voice/: __init__.py  stt.py  tts.py
api/: agent_routes.py  deps.py  main.py  routes.py  startup.py
data/: faiss.index  faiss_meta.json
data/audit/: azl_events.jsonl
docs/: curl_examples.md
tests/: test_azl_endpoints.py  test_env_setup.py  test_loop_until_mastered.py  test_rag_integration.py  test_smoke.py  test_validators.py  test_voice_endpoints.py
ui/: clean_integration.js  help_guide.js  index.html  modern.html  style.css
ui/js/: answer.js  api.js  dashboard.js  main.js  state.js  teach.js  upload.js  voice.js
